tried to fix projectlink overflow

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -30,4 +30,5 @@
   background: rgba(96, 96, 96, 0.3);
   padding: 5px;
   text-align: center;
+  overflow: auto;
 }
